# timeln

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: fibonacci.rs  sleep.rs
src/: annotator.rs  argopt.rs  error.rs  formatter.rs  main.rs  plot.rs  reader.rs  summarizer.rs  time_format.rs  time_formatter.rs  timeln.rs  timeln_annotation.rs
