[package]
name = "timeln"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "annotate your stdout with timing information"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
structopt = "0.3.23"
regex = "1.5.4"
ctrlc = "3.1.9"
